chore(core) updated

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ Requires PHP: 7.4
 License: GPL-2.0-or-later
 License URI: https://www.gnu.org/licenses/gpl-2.0.html
 Tested up to: 6.6
+Tags: one-column, two-columns, custom-logo, featured-images, footer-widgets, theme-options, translation-ready
 */
 
 /* Add your custom styles below this line */
